[gd_scene load_steps=2 format=3 uid="uid://cuqeybsiqcfqm"]

[ext_resource type="Script" path="res://enemy_spawner.gd" id="1_3lljb"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_3lljb")

[node name="Timer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="Rythm1" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Rythm2" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Rythm3" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Rythm4" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Rythm1" to="." method="_on_rythm_1_timeout"]
[connection signal="timeout" from="Rythm2" to="." method="_on_rythm_2_timeout"]
[connection signal="timeout" from="Rythm3" to="." method="_on_rythm_3_timeout"]
[connection signal="timeout" from="Rythm4" to="." method="_on_rythm_4_timeout"]
